fix navbar resposive js

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             </div>
                             <div class="col-lg-9">
                                 <h4 id="js"><a href="https://fr.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript <i class="fas fa-external-link-alt"></i></a></h4>
-                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
                                 <p>Manipulation du DOM et AJAX.</p>
                             </div>
                             <hr class="small-subline mb-5" />
